# jointprof

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  cleanup  configure  configure.ac  index.html  pkgdown.yml  tic.R
.github/workflows/: pkgdown.yaml
.travis/: Makevars
R/: RcppExports.R  callback.R  combine.R  compat-purrr.R  debug.R  gprofiler-package.R  jointprof.R  parse.R  pprof.R  profiler.R  record.R  utils.R  vis.R  zzz.R
articles/: index.html  internals.html  jointprof.html  proposal.html
docs/: authors.html  index.html
docs/articles/: index.html  proposal.html
docs/news/: index.html
docs/reference/: get_profiler_traces.html  gprofiler.html  index.html  start_profiler.html
man/: comingle_pprof.Rd  comingle_rprof.Rd  find_pprof.Rd  get_profiler_traces.Rd  gprofiler-package.Rd  gprofiler.Rd  joint_pprof.Rd  jointprof-package.Rd  start_profiler.Rd  vis_pprof.Rd
news/: index.html
reference/: find_pprof.html  index.html  joint_pprof.html  jointprof-package.html  start_profiler.html
src/: .gitignore  Makevars  Makevars.in  Makevars.local  RcppExports.cpp  basictypes.h  callback.cpp  config.h  config.h.in  getpc.h  go.cpp  gprofiler.cpp  gprofiler_types.h  jointprof.cpp  profiler.cpp  profiler.h  sysinfo.cc  sysinfo.cpp  sysinfo.h
src/go/src/R/main/: main.go
tests/: interactive.R  testthat.R
tests/testthat/: test-integration.R
vignettes/: guide.Rmd  internals.Rmd  jointprof.Rmd  proposal.Rmd
